bug pesc inc e scrolljump

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -185,15 +185,16 @@ html,
 body {
     font-size: 16px !important;
     font-family: Helvetica, Arial, "Helvetica Neue", sans-serif;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .app-main {
     width: 100%;
     margin: 0 auto;
-}
-
-html {
-    margin-right: calc(100vw - 100%);
+    width: calc(100% + (100vw - 100%));
 }
 
 @media (min-width: 961px) and (max-width: 1919px) {
